--- a/front-end/static-files/index.html
+++ b/front-end/static-files/index.html
@@ -5,13 +5,13 @@
     <title>Aplicación Microservicios Plantilla</title>
 
     <!-- Cargamos biblioteca Jasmine -->
-	<!--
+
     <link rel="stylesheet" href="lib/jasmine-4.5.0/jasmine.css">
     <script src="lib/jasmine-4.5.0/jasmine.js"></script>
     <script src="lib/jasmine-4.5.0/jasmine-html.js"></script>
     <script src="lib/jasmine-4.5.0/boot0.js"></script>
     <script src="lib/jasmine-4.5.0/boot1.js"></script>
-	-->
+
     <!-- Cargamos nuestros CSS -->
     <link rel="stylesheet" href="css/front-end.css">
 
@@ -26,6 +26,8 @@
             title="Llama a la ruta / del MS Plantilla">Home</a>
         <a href="javascript:Plantilla.procesarAcercaDe()" class="opcion-principal"
             title="Llama a la ruta /acercade del MS Plantilla">Acerca de</a>
+        <a href="javascript:Plantilla.listarNombresCurling()" class="opcion-principal"
+           title="Realiza un listado con los nombres de los jugadores">Nombres Jugadores</a>
     </nav>
 
     <!-- 
@@ -52,7 +54,7 @@
     <script src="js/front-end.js"></script>
     <script src="js/ms-plantilla.js"></script>
 
-	<!--
+
     <!-- Cargamos ficheros spec con los tests -->
     <script src="js/front-end-spec.js"></script>
     <script src="js/ms-plantilla-spec.js"></script>
