--- a/front-end/static-files/index.html
+++ b/front-end/static-files/index.html
@@ -28,6 +28,8 @@
             title="Llama a la ruta /acercade del MS Plantilla">Acerca de</a>
         <a href="javascript:Plantilla.listarNombresCurling()" class="opcion-principal"
            title="Realiza un listado con los nombres de los jugadores">Nombres Jugadores</a>
+        <a href="javascript:Plantilla.listadoCompleto()" class="opcion-principal"
+           title="Realiza un listado con los nombres de los jugadores">Jugadores</a>
     </nav>
 
     <!-- 
