--- a/front-end/static-files/index.html
+++ b/front-end/static-files/index.html
@@ -30,6 +30,8 @@
            title="Realiza un listado con los nombres de los jugadores">Nombres Jugadores</a>
         <a href="javascript:Plantilla.listadoCompleto()" class="opcion-principal"
            title="Realiza un listado con los nombres de los jugadores">Jugadores</a>
+        <a href="javascript:Plantilla.listaOrdenada()" class="opcion-principal"
+            title="Realiza un listado con los nombres de los jugadores">Nombres Ordenados</a>
     </nav>
 
     <!-- 
@@ -37,7 +39,7 @@
         Todos los apartados de este article se rellenarán con funciones en Javascript
     -->
     <article id="seccion-principal">
-        <!-- Título del article -->
+
         <h2 id="seccion-principal-titulo"></h2>
         <!-- Contenido del article -->
         <div id="seccion-principal-contenido">
