--- a/front-end/static-files/index.html
+++ b/front-end/static-files/index.html
@@ -32,6 +32,23 @@
            title="Realiza un listado con los nombres de los jugadores">Jugadores</a>
         <a href="javascript:Plantilla.listaOrdenada()" class="opcion-principal"
             title="Realiza un listado con los nombres de los jugadores">Nombres Ordenados</a>
+
+
+        <a href="javascript:Plantilla.listaOrdenadaC('nombre')" class="opcion-principal"
+           title="Realizar un listado de todos los nombres de todos los jugadores que hay en la BBDD ordenados alfabeticamente">Nombre</a>
+        <a href="javascript:Plantilla.listaOrdenadaC('apellido')" class="opcion-principal"
+           title="Realizar un listado de todos los nombres de todos los jugadores que hay en la BBDD ordenados alfabeticamente">Apellido</a>
+        <a href="javascript:Plantilla.listaOrdenadaC('fecha_nacimiento')" class="opcion-principal"
+           title="Realizar un listado de todos los nombres de todos los jugadores que hay en la BBDD ordenados alfabeticamente">Fecha_Nacimiento</a>
+        <a href="javascript:Plantilla.listaOrdenadaC('categorias_jugadas')" class="opcion-principal"
+           title="Realizar un listado de todos los nombres de todos los jugadores que hay en la BBDD ordenados alfabeticamente">Categorias_jugadas</a>
+        <a href="javascript:Plantilla.listaOrdenadaC('victorias')" class="opcion-principal"
+           title="Realizar un listado de todos los nombres de todos los jugadores que hay en la BBDD ordenados alfabeticamente">Victorias</a>
+        <a href="javascript:Plantilla.listaOrdenadaC('derrotas')" class="opcion-principal"
+           title="Realizar un listado de todos los nombres de todos los jugadores que hay en la BBDD ordenados alfabeticamente">Derrotas</a>
+
+
+
     </nav>
 
     <!-- 
@@ -41,8 +58,10 @@
     <article id="seccion-principal">
 
         <h2 id="seccion-principal-titulo"></h2>
+
         <!-- Contenido del article -->
         <div id="seccion-principal-contenido">
+
         </div>
     </article>
 
